Delete and create functionality for editing survey forms