@@ -18,25 +18,11 @@ public class ResearcherEditSurveyFormContextBuilder extends ContextBuilder {
 		
 		SurveyForm form = SurveyForm.SELECT()
 									.where("id", formId)
-									.get()
-									.get(0);
-		List<SurveyFormQuestion> questions = SurveyFormQuestion.SELECT()
-															   .where("form", formId)
-															   .orderBy("id")
-															   .get();
-		
-		String[] questionIds = new String[questions.size()];
-		for (int i = 0; i < questions.size(); i++)
-			questionIds[i] = Integer.toString(questions.get(i).getId());
-
-		List<SurveyFormQuestionChoice> choices = SurveyFormQuestionChoice.SELECT()
-																		 .whereIn("question", questionIds)
-																		 .get();
+									.getFirst();
+		form.retrieveQuestions();
 		
 		HashMap<String, Object> context = new HashMap<String, Object>();
 		context.put("survey_form", form);
-		context.put("questions", questions);
-		context.put("choices", choices);
 		
 		return context;
 	}
